Fixed wrong z-index order of header, overlay and drawer

--- a/src/assets/stylesheets/layout/_base.scss
+++ b/src/assets/stylesheets/layout/_base.scss
@@ -142,7 +142,7 @@ hr {
     opacity 0.25s;
   background-color: $md-color-black--light;
   opacity: 0;
-  z-index: 2;
+  z-index: 3;
 
   // [tablet -]: Trigger overlay
   @include break-to-device(tablet) {
